fix: grall vm